# Universidade

./: .gitignore  README.md
1 ANO /2 semestre/LA1/Projeto/projeto/: CMakeLists.txt
1 ANO /2 semestre/LA1/Projeto/projeto/documentacao/html/: annotated.html  classes.html  dados_8h.html  dados_8h_source.html  dir_6ea6a6918393993a6a2c0f40fca09e95.html  dir_9fb70d85b462abffabc49c816cd14788.html  dir_b66c3a20494707778dd4e90c620af684.html  dir_eb8800cb0c3fd4fa9d40306d6b83386d.html  files.html  globals.html  globals_type.html  interface_8c.html  listas_8h.html  listas_8h_source.html  logica_8h.html  logica_8h_source.html  main_8c.html  struct_c_o_o_r_d_e_n_a_d_a.html  struct_j_o_g_a_d_a.html
1 ANO /2 semestre/LA1/Projeto/projeto/documentacao/html/search/: all_1.js  all_4.js  all_9.js  all_a.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js
1 ANO /2 semestre/LA1/Projeto/projeto/documentacao/latex/: annotated.tex  files.tex  interface_8h.tex  listas_8h.tex  main_8c.tex  refman.tex  struct_j_o_g_a_d_a.tex
1 ANO /2 semestre/LA1/Projeto/projeto/documentacao/xml/: _target_directories_8txt.xml  dir_6ea6a6918393993a6a2c0f40fca09e95.xml  dir_c95515bf5b3b9d60c756cf5ef2bbb78b.xml  interface_8h.xml  listas_8h.xml
1 ANO /2 semestre/LA1/Projeto/projeto/interface/: interface.c  interface.h
1 ANO /2 semestre/LA1/Projeto/projeto/listas/: listas.c  listas.h
1 ANO /2 semestre/LA1/Projeto/projeto/logica/: logica.c
PROJETOS/Base de dados/: trabalhobd.sql
(+179 files in other folders)
